Fixed image overflow problem

--- a/style.css
+++ b/style.css
@@ -54,3 +54,7 @@ header, nav, footer, .content, .sidebar, .xoxo>li {
 .access {
     display: none;
 }
+
+img {
+	max-width: 100%;
+}
